--- a/v3/WebPrograming2_Final-Project/src/views/Booking/confirm-booking.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Booking/confirm-booking.ejs
@@ -28,7 +28,7 @@
               </div>
               <div class="row">
                 <div class="col-md-12 form-it">
-                  <input style="margin-top: 10px;" class="submit" type="submit" value="save" />
+                  <input style="margin-top: 10px;" class="submit" type="submit" value="Confirm" />
                 </div>
               </div>
             </form>
