--- a/v3/WebPrograming2_Final-Project/src/views/Cinema/Cinema.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Cinema/Cinema.ejs
@@ -10,7 +10,7 @@
                   <% cinemas.forEach(cinema => { %>
                     <div class="movie-item-style-2 movie-item-style-1">
                       <div class="mv-img">
-                        <a href="#"
+                        <a href="/booking/choose-seat?filmID=<%= cinema.filmId %>&showtimeID=<%= cinema.showtimeId %>"
                           ><img
                             src="/images/cinema.jpg"
                             alt=""
@@ -25,7 +25,8 @@
                         <% let date = cinema.start.toString().split(" "); %>
                         <p style="font-weight: bold;">
                           Suất chiếu: <u> <%=`${date[1]} ${date[2]} ${date[3]} ${date[4]}`%> </u>
-                        </p>                
+                          <u style="color: teal;">VNĐ: <%=cinema.price%> </u>
+                        </p>             
                       </div>
                     </div>
                     <% }); %>
