--- a/v3/WebPrograming2_Final-Project/src/views/HomePage/filterCinema.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/HomePage/filterCinema.ejs
@@ -24,7 +24,7 @@
                 <% var i = 0; cinemas.forEach(cinema => { %>
                 <div class="blog-item-style-1 blog-item-style-3">
                     <img
-                        src="/images/Cluster2.jpg"
+                        src="/admin/manage-film/avatarCinema/<%= cinema.uuid %>"
                         alt="Film Image"/>
                     <div class="blog-it-infor">
                         <div class="container" style="margin-bottom: 20px;">
