sua loi hien thi

--- a/v3/WebPrograming2_Final-Project/src/views/HomePage/HomePage.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/HomePage/HomePage.ejs
@@ -11,7 +11,7 @@
                     src="/admin/manage-film/poster/<%= film.uuid %>"
                     alt=""
                     max-width="285"
-                    max-height="437"
+                    style="height: 400px;"
                     width="auto"
                     height="auto"
                 /></a>
@@ -54,7 +54,7 @@
                           <div class="mv-img">
                             <img
                               src="/admin/manage-film/poster/<%= newFilm.uuid %>"
-                              alt=""
+                              style="height: 300px;"
                               width="185"
                               height="284"
                             />
@@ -85,7 +85,7 @@
                               src="/admin/manage-film/poster/<%= film.uuid %>"
                               alt="<%=film.displayName%>"
                               width="185"
-                              height="284"
+                              style="height: 300px;"
                             />
                           </div>
                           <div class="hvr-inner">
